--- a/viz/index.html
+++ b/viz/index.html
@@ -3,8 +3,10 @@
     <head>
         <meta charset="utf-8"/>
         <title>Climate Visualization</title>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
+        <div id="dateDiv"></div>
         <canvas id="glCanvas" width="1280" height="900"></canvas>
 
         <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
