--- a/viz/index.html
+++ b/viz/index.html
@@ -1,22 +1,49 @@
 <!DOCTYPE html>
 <html>
+        <style>
+                .loader {
+                    border: 16px solid #f3f3f3;
+                    border-radius: 50%;
+                    border-top: 16px solid #3498db;
+                    width: 120px;
+                    height: 120px;
+                    -webkit-animation: spin 2s linear infinite; /* Safari */
+                    animation: spin 2s linear infinite;
+                }
+                
+                /* Safari */
+                @-webkit-keyframes spin {
+                    0% { -webkit-transform: rotate(0deg); }
+                    100% { -webkit-transform: rotate(360deg); }
+                }
+                
+                @keyframes spin {
+                    0% { transform: rotate(0deg); }
+                    100% { transform: rotate(360deg); }
+                }
+                </style>
     <head>
         <meta charset="utf-8"/>
         <title>Climate Visualization</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <button onclick="showStuff(canvas)">Show Canvas</button>
-        <button onclick="showStuff(cartoMap)">Show Map</button>
-        <br>
-        <div id='canvas'>
-            <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sed ligula euismod erat molestie egestas a a arcu. Morbi in elit dolor. Curabitur sit amet risus ante. Nulla id commodo est. Fusce posuere pretium lorem eu ornare. Donec et facilisis turpis. Donec ornare dignissim convallis. Sed non lorem vitae dui posuere dictum in id tellus. Mauris fringilla ante suscipit lacus varius hendrerit. In pretium, arcu in feugiat vestibulum, ante elit bibendum purus, sit amet laoreet ipsum felis pulvinar metus. Aliquam erat volutpat.</h1>
-            <div id="dateDiv"></div>
-            <canvas id="glCanvas" width="1280" height="900"></canvas>        
+        <div id='loading' class="loader">
+            <h1></h1>
         </div>
-        <div id='cartoMap'>
-            <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sed ligula euismod erat molestie egestas a a arcu. Morbi in elit dolor. Curabitur sit amet risus ante. Nulla id commodo est. Fusce posuere pretium lorem eu ornare. Donec et facilisis turpis. Donec ornare dignissim convallis. Sed non lorem vitae dui posuere dictum in id tellus. Mauris fringilla ante suscipit lacus varius hendrerit. In pretium, arcu in feugiat vestibulum, ante elit bibendum purus, sit amet laoreet ipsum felis pulvinar metus. Aliquam erat volutpat.</h1>
-            <iframe width="100%" height="520" frameborder="0" src="https://etienneboutet.carto.com/builder/4e530f7d-3a9a-4f85-8ba7-b0873baa8c46/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+        <div id='viz'>
+            <button onclick="showStuff(canvas)">Show Canvas</button>
+            <button onclick="showStuff(cartoMap)">Show Map</button>
+            <br>
+            <div id='canvas'>
+                <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sed ligula euismod erat molestie egestas a a arcu. Morbi in elit dolor. Curabitur sit amet risus ante. Nulla id commodo est. Fusce posuere pretium lorem eu ornare. Donec et facilisis turpis. Donec ornare dignissim convallis. Sed non lorem vitae dui posuere dictum in id tellus. Mauris fringilla ante suscipit lacus varius hendrerit. In pretium, arcu in feugiat vestibulum, ante elit bibendum purus, sit amet laoreet ipsum felis pulvinar metus. Aliquam erat volutpat.</h1>
+                <div id="dateDiv"></div>
+                <canvas id="glCanvas" width="1280" height="900"></canvas>        
+            </div>
+            <div id='cartoMap'>
+                <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sed ligula euismod erat molestie egestas a a arcu. Morbi in elit dolor. Curabitur sit amet risus ante. Nulla id commodo est. Fusce posuere pretium lorem eu ornare. Donec et facilisis turpis. Donec ornare dignissim convallis. Sed non lorem vitae dui posuere dictum in id tellus. Mauris fringilla ante suscipit lacus varius hendrerit. In pretium, arcu in feugiat vestibulum, ante elit bibendum purus, sit amet laoreet ipsum felis pulvinar metus. Aliquam erat volutpat.</h1>
+                <iframe width="100%" height="520" frameborder="0" src="https://etienneboutet.carto.com/builder/4e530f7d-3a9a-4f85-8ba7-b0873baa8c46/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+            </div>
         </div>        
         <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/106/three.js"></script>
