--- a/viz/index.html
+++ b/viz/index.html
@@ -11,8 +11,8 @@
         <button onclick="showStuff(cartoMap)">Show Map</button>
         <br>
         <div id='canvas'>
-            <div id="dateDiv"></div>
-	        <div class="dropdown">
+            <div id="dateDiv">Loading...</div>
+	        <div id="dropDownDiv" class="dropdown">
 	          <button onclick="dropDown()" class="dropbtn">Station</button>
 	          <div id="myDropdown" class="dropdown-content">
 	            <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
