--- a/viz/index.html
+++ b/viz/index.html
@@ -16,7 +16,7 @@
                 <div id='canvas'>
                     <div id="dateDiv">Loading...</div>
 	                <div id="dropDownDiv" class="dropdown">
-                    <button onclick="dropDown()" class="dropbtn">Station</button>
+                    <button id="dropdownbtn" onclick="dropDown()" class="dropbtn">Station</button>
                     <div id="myDropdown" class="dropdown-content">
                         <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
                     </div>
