Add description of stations visualization

--- a/viz/index.html
+++ b/viz/index.html
@@ -16,7 +16,11 @@
                 <button onclick="showStuff(cartoMap)">Record breaking temperatures across Canada</button>
                 <br>
                 <div id='canvas'>
-                    <p>Visualisation of the temperature trends over a Canadian weather station.</p>
+                    <p>Visualisation of the temperature trends over a Canadian weather station.
+                        The data is arranged radially my month.
+                        The vertical axis displays temperature.
+                        As seasons go by, the average temperature goes up and down.
+                        For some stations, global warming causes the temperature to spin higher every year.</p>
                   <div id="dateDiv">Loading...</div>
 	                <div id="dropDownDiv" class="dropdown">
                     <button onclick="dropDown()" class="dropbtn">Select a weather station ▼</button>
