--- a/viz/index.html
+++ b/viz/index.html
@@ -31,7 +31,9 @@
                     <canvas id="glCanvas" width="1280" height="900"></canvas>
                 </div>
                 <div id='cartoMap'>
-                    <p>Time series visualization of maximum temperature trends in Canada.</p>
+                    <p>Time series visualization of maximum temperature trends in Canada.
+                        Every dot represent record temperatures at a station.
+                    The climatological data used here goes back as far as the early 1800's, and is plotted up to 2015.</p>
                     <iframe width="100%" height="520" frameborder="0" src="https://etienneboutet.carto.com/builder/4e530f7d-3a9a-4f85-8ba7-b0873baa8c46/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
                 </div>
             </div>
