add current station display properly

--- a/viz/index.html
+++ b/viz/index.html
@@ -17,7 +17,8 @@
                 <br>
                 <div id='canvas'>
                     <p>Visualisation of the temperature trends over a Canadian weather station.</p>
-                  <div id="dateDiv">Loading...</div>
+                    <div id="dateDiv">Loading...</div>
+                    <div id="currentDiv">hello world</div >
 	                <div id="dropDownDiv" class="dropdown">
                     <button onclick="dropDown()" class="dropbtn">Select a weather station ▼</button>
                     <div id="myDropdown" class="dropdown-content">
