--- a/viz/index.html
+++ b/viz/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <div id='loading' class="loader"></div>
+        <div id='loading' class="loader centered"></div>
         <div id='viz'>
             <div id='viz'>
                 <button onclick="showStuff(canvas)">Show Canvas</button>
@@ -25,7 +25,7 @@
                 </div>
                 <div id='cartoMap'>
                     <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sed ligula euismod erat molestie egestas a a arcu. Morbi in elit dolor. Curabitur sit amet risus ante. Nulla id commodo est. Fusce posuere pretium lorem eu ornare. Donec et facilisis turpis. Donec ornare dignissim convallis. Sed non lorem vitae dui posuere dictum in id tellus. Mauris fringilla ante suscipit lacus varius hendrerit. In pretium, arcu in feugiat vestibulum, ante elit bibendum purus, sit amet laoreet ipsum felis pulvinar metus. Aliquam erat volutpat.</h1>
-                    <iframe width="100%" height="520" frameborder="0" src="https://etienneboutet.carto.com/builder/4e530f7d-3a9a-4f85-8ba7-b0873baa8c46/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+                    <iframe width="100%" height="520" frameborder="0" src="https://etienneboutet.carto.com/builder/1341f4b1-b1dd-40db-8bc8-8d6ac6da4190/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
                 </div>
             </div>
         </div>        
