--- a/viz/index.html
+++ b/viz/index.html
@@ -5,6 +5,7 @@
 	    <link rel="stylesheet" type="text/css" href="css/main.css">
         <title>Climate Visualization</title>
         <link rel="stylesheet" href="css/style.css">
+        <link href="https://fonts.googleapis.com/css?family=Literata&display=swap" rel="stylesheet"> 
     </head>
     <body>
         <h1>Visualizing Climate Change</h1>
@@ -12,8 +13,8 @@
         <div id='loading' class="loader"></div>
         <div id='viz'>
             <div id='viz'>
-                <button onclick="showStuff(canvas)">The evolution of temperatures through time</button>
-                <button onclick="showStuff(cartoMap)">Record breaking temperatures across Canada</button>
+                <button class="tab" onclick="showStuff(canvas)">The evolution of temperatures through time</button>
+                <button class="tab" onclick="showStuff(cartoMap)">Record breaking temperatures across Canada</button>
                 <br>
                 <div id='canvas'>
                     <p>Visualisation of the temperature trends over a Canadian weather station.
@@ -28,13 +29,13 @@
                         <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
                     </div>
                     </div>
-                    <canvas id="glCanvas" width="1280" height="900"></canvas>
+                    <canvas id="glCanvas" width="950" height="950"></canvas>
                 </div>
                 <div id='cartoMap'>
                     <p>Time series visualization of maximum temperature trends in Canada.
                         Every dot represent record temperatures at a station.
                     The climatological data used here goes back as far as the early 1800's, and is plotted up to 2015.</p>
-                    <iframe width="100%" height="520" frameborder="0" src="https://etienneboutet.carto.com/builder/4e530f7d-3a9a-4f85-8ba7-b0873baa8c46/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+                    <iframe width="100%" height="700" frameborder="0" src="https://etienneboutet.carto.com/builder/4e530f7d-3a9a-4f85-8ba7-b0873baa8c46/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
                 </div>
             </div>
         </div>
