--- a/viz/index.html
+++ b/viz/index.html
@@ -33,17 +33,13 @@
                     <canvas id="glCanvas" width="950" height="950"></canvas>
                 </div>
                 <div id='cartoMap'>
-<<<<<<< HEAD
-                    <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sed ligula euismod erat molestie egestas a a arcu. Morbi in elit dolor. Curabitur sit amet risus ante. Nulla id commodo est. Fusce posuere pretium lorem eu ornare. Donec et facilisis turpis. Donec ornare dignissim convallis. Sed non lorem vitae dui posuere dictum in id tellus. Mauris fringilla ante suscipit lacus varius hendrerit. In pretium, arcu in feugiat vestibulum, ante elit bibendum purus, sit amet laoreet ipsum felis pulvinar metus. Aliquam erat volutpat.</h1>
-                    <iframe width="100%" height="520" frameborder="0" src="https://etienneboutet.carto.com/builder/1341f4b1-b1dd-40db-8bc8-8d6ac6da4190/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
-=======
                     <p>Time series visualization of maximum temperature trends in Canada.
                         Every dot represent record temperatures at a station.
                     The climatological data used here goes back as far as the early 1800's, and is plotted up to 2015.</p>
-                    <iframe width="100%" height="700" frameborder="0" src="https://etienneboutet.carto.com/builder/4e530f7d-3a9a-4f85-8ba7-b0873baa8c46/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
->>>>>>> fc5c51a96ce58904c2e54bac01e922cc8e20de8a
+                    <iframe width="100%" height="520" frameborder="0" src="https://etienneboutet.carto.com/builder/1341f4b1-b1dd-40db-8bc8-8d6ac6da4190/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
                 </div>
             </div>
+            <div id="footer">Réalisé en 2019 par <a href="https://www.linkedin.com/in/davidlandry93/"> David Landry</a>, Si Jun Peng, Étienne Boutet</div>
         </div>
         <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/106/three.js"></script>
