modified strings and timeout time

--- a/viz/index.html
+++ b/viz/index.html
@@ -23,7 +23,7 @@
                         As seasons go by, the average temperature goes up and down.
                         For some stations, global warming causes the temperature to spin higher every year.</p>
                     <div id="dateDiv">Loading...</div>
-                    <div id="currentDiv">hello world</div >
+                    <div id="currentDiv">Loading...</div >
 	                <div id="dropDownDiv" class="dropdown">
                     <button onclick="dropDown()" class="dropbtn">Select a weather station ▼</button>
                     <div id="myDropdown" class="dropdown-content">
